src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP037_UP037_0.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    OldCodeBlocks: ~
  location:
    row: 5
    column: 0
  end_location:
    row: 8
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 5
      column: 0
    end_location:
      row: 8
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 10
    column: 0
  end_location:
    row: 16
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 10
      column: 0
    end_location:
      row: 16
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 18
    column: 0
  end_location:
    row: 19
    column: 19
  fix:
    content:
      - "print(\"PY3!\")"
    location:
      row: 18
      column: 0
    end_location:
      row: 19
      column: 19
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 22
    column: 4
  end_location:
    row: 25
    column: 20
  fix:
    content:
      - "print(\"PY3\")"
    location:
      row: 22
      column: 4
    end_location:
      row: 25
      column: 20
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 27
    column: 0
  end_location:
    row: 29
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 27
      column: 0
    end_location:
      row: 29
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 31
    column: 0
  end_location:
    row: 37
    column: 30
  fix:
    content:
      - "def f():"
      - "    print(\"py3\")"
      - "    print(\"This the next\")"
    location:
      row: 31
      column: 0
    end_location:
      row: 37
      column: 30
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 39
    column: 0
  end_location:
    row: 42
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 39
      column: 0
    end_location:
      row: 42
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 47
    column: 0
  end_location:
    row: 50
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 47
      column: 0
    end_location:
      row: 50
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 55
    column: 0
  end_location:
    row: 56
    column: 18
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 55
      column: 0
    end_location:
      row: 56
      column: 18
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 58
    column: 0
  end_location:
    row: 61
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 58
      column: 0
    end_location:
      row: 61
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 64
    column: 4
  end_location:
    row: 67
    column: 20
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 64
      column: 4
    end_location:
      row: 67
      column: 20
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 69
    column: 0
  end_location:
    row: 72
    column: 16
  fix:
    content:
      - "print(\"py3\")"
    location:
      row: 69
      column: 0
    end_location:
      row: 72
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 75
    column: 4
  end_location:
    row: 81
    column: 13
  fix:
    content:
      - yield
    location:
      row: 75
      column: 4
    end_location:
      row: 81
      column: 13
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 88
    column: 4
  end_location:
    row: 93
    column: 16
  fix:
    content:
      - "def f(py3):"
      - "        pass"
    location:
      row: 88
      column: 4
    end_location:
      row: 93
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 99
    column: 4
  end_location:
    row: 102
    column: 9
  fix:
    content:
      - "3"
    location:
      row: 99
      column: 4
    end_location:
      row: 102
      column: 9
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 106
    column: 0
  end_location:
    row: 115
    column: 20
  fix:
    content:
      - "def f():"
      - "    print(\"py3\")"
      - "def g():"
      - "    print(\"py3\")"
    location:
      row: 106
      column: 0
    end_location:
      row: 115
      column: 20
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 118
    column: 4
  end_location:
    row: 119
    column: 16
  fix:
    content:
      - print(3)
    location:
      row: 118
      column: 4
    end_location:
      row: 119
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 123
    column: 0
  end_location:
    row: 123
    column: 20
  fix:
    content:
      - print(3)
    location:
      row: 123
      column: 0
    end_location:
      row: 123
      column: 20
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 125
    column: 0
  end_location:
    row: 126
    column: 12
  fix:
    content:
      - print(3)
    location:
      row: 125
      column: 0
    end_location:
      row: 126
      column: 12
  parent: ~

