src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP037_UP037_1.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    OldCodeBlocks: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 7
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 4
      column: 0
    end_location:
      row: 7
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 12
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 9
      column: 0
    end_location:
      row: 12
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 14
      column: 0
    end_location:
      row: 17
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 19
    column: 0
  end_location:
    row: 22
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 19
      column: 0
    end_location:
      row: 22
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 27
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 24
      column: 0
    end_location:
      row: 27
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 29
    column: 0
  end_location:
    row: 32
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 29
      column: 0
    end_location:
      row: 32
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 36
    column: 0
  end_location:
    row: 39
    column: 5
  fix:
    content:
      - "3"
    location:
      row: 36
      column: 0
    end_location:
      row: 39
      column: 5
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 43
    column: 0
  end_location:
    row: 46
    column: 12
  fix:
    content:
      - ""
    location:
      row: 43
      column: 0
    end_location:
      row: 44
      column: 13
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 50
    column: 0
  end_location:
    row: 53
    column: 12
  fix:
    content:
      - "else:"
      - "    print(3)"
    location:
      row: 50
      column: 0
    end_location:
      row: 53
      column: 12
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 57
    column: 0
  end_location:
    row: 58
    column: 12
  fix:
    content:
      - "else:"
      - "    print(3)"
    location:
      row: 57
      column: 0
    end_location:
      row: 58
      column: 12
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 63
    column: 4
  end_location:
    row: 64
    column: 16
  fix:
    content:
      - "else:"
      - "        print(3)"
    location:
      row: 63
      column: 4
    end_location:
      row: 64
      column: 16
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 68
    column: 0
  end_location:
    row: 71
    column: 12
  fix:
    content:
      - ""
    location:
      row: 68
      column: 0
    end_location:
      row: 69
      column: 13
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 76
    column: 4
  end_location:
    row: 77
    column: 16
  fix:
    content:
      - "else:"
      - "        print(3)"
    location:
      row: 76
      column: 4
    end_location:
      row: 77
      column: 16
  parent: ~

