src/rules/pyupgrade/snapshots/ruff__rules__pyupgrade__tests__UP037_UP037_2.py.snap
---
source: src/rules/pyupgrade/mod.rs
expression: diagnostics
---
- kind:
    OldCodeBlocks: ~
  location:
    row: 4
    column: 0
  end_location:
    row: 7
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 4
      column: 0
    end_location:
      row: 7
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 9
    column: 0
  end_location:
    row: 12
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 9
      column: 0
    end_location:
      row: 12
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 14
    column: 0
  end_location:
    row: 17
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 14
      column: 0
    end_location:
      row: 17
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 19
    column: 0
  end_location:
    row: 22
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 19
      column: 0
    end_location:
      row: 22
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 24
    column: 0
  end_location:
    row: 27
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 24
      column: 0
    end_location:
      row: 27
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 29
    column: 0
  end_location:
    row: 32
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 29
      column: 0
    end_location:
      row: 32
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 34
    column: 0
  end_location:
    row: 37
    column: 7
  fix:
    content:
      - 3+6
    location:
      row: 34
      column: 0
    end_location:
      row: 37
      column: 7
  parent: ~
- kind:
    OldCodeBlocks: ~
  location:
    row: 39
    column: 0
  end_location:
    row: 40
    column: 8
  fix:
    content:
      - pass
    location:
      row: 39
      column: 0
    end_location:
      row: 40
      column: 8
  parent: ~

